Fix visual regressions and layout issues

--- a/src/Search.css
+++ b/src/Search.css
@@ -1,8 +1,6 @@
-.app-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 1.5em;
+.add-recipe-bar {
+  text-align: right;
+  margin-bottom: 0.5em;
 }
 
 .add-recipe-link {
